# kde-hyperx

./: .gitignore  CMakeLists.txt  README.md  build.sh  install.sh  nohup.out  uninstall.sh
desktop/: kde-hyperx-autostart.desktop  kde-hyperx.desktop
src/: HyperXDevice.cpp  HyperXDevice.h  TrayIcon.cpp  TrayIcon.h  main.cpp
udev/: 99-hyperx-headset.rules
